# simple_webftp

./: .gitignore  Cargo.toml  README.md  build.rs
pages/: bun.lockb  index.html  package.json  vite.config.ts
pages/src/: App.css  App.tsx  main.tsx
pages/src/constants/: index.ts
src/: assets.rs  echo.rs  files.rs  main.rs
src/helpers/: rocket.rs
