[package]
name = "simple_webftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json", "http2"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.107"
chrono = { version = "0.4.26", features = ["serde"] }
hostname = "0.3.1"
dotenv = "0.15.0"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
anyhow = "1.0.75"
